Bug #50926 ndbinfo table memoryusage has inaccurate column name "DATA_MEMORY".